@@ -89,15 +89,22 @@ module ElasticAPM
           end
 
           def build_destination(destination)
-            {
-              service: {
-                name: keyword_field(destination.name),
-                resource: keyword_field(destination.resource),
-                type: keyword_field(destination.type)
-              },
-              address: keyword_field(destination.address),
-              port: destination.port
-            }
+            base =
+              {
+                service: {
+                  name: keyword_field(destination.name),
+                  resource: keyword_field(destination.resource),
+                  type: keyword_field(destination.type)
+                },
+                address: keyword_field(destination.address),
+                port: destination.port
+              }
+
+            if cloud = destination.cloud
+              base[:cloud] = { region: cloud.region }
+            end
+
+            base
           end
         end
 
