@@ -46,8 +46,7 @@ module ElasticAPM
       expect(span.context.db.type).to eq('dynamodb')
 
       # span context destination
-      # TODO: test the region in the appropriate field when the spec is complete
-      #expect(span.context.destination.cloud.region).to eq('us-west-1')
+      expect(span.context.destination.cloud.region).to eq('us-west-1')
       expect(span.context.destination.resource).to eq('dynamodb')
       expect(span.context.destination.type).to eq('db')
     end
@@ -79,20 +78,6 @@ module ElasticAPM
       span = @intercepted.spans.first
 
       expect(span.name).to eq('DynamoDB DescribeBackup')
-      expect(span.type).to eq('db')
-      expect(span.subtype).to eq('dynamodb')
-      expect(span.action).to eq(:describe_backup)
-      expect(span.outcome).to eq('success')
-
-      # span context db
-      expect(span.context.db.instance).to eq('us-west-1')
-      expect(span.context.db.type).to eq('dynamodb')
-
-      # span context destination
-      # TODO: test the region in the appropriate field when the spec is complete
-      #expect(span.context.destination.cloud.region).to eq('us-west-1')
-      expect(span.context.destination.resource).to eq('dynamodb')
-      expect(span.context.destination.type).to eq('db')
     end
 
     it "captures the key_condition_expression for queries", :intercept do
@@ -106,21 +91,7 @@ module ElasticAPM
       span = @intercepted.spans.first
 
       expect(span.name).to eq('DynamoDB Query myTable')
-      expect(span.type).to eq('db')
-      expect(span.subtype).to eq('dynamodb')
-      expect(span.action).to eq(:query)
-      expect(span.outcome).to eq('success')
-
-      # span context db
-      expect(span.context.db.instance).to eq('us-west-1')
-      expect(span.context.db.type).to eq('dynamodb')
       expect(span.context.db.statement).to eq('Artist = :v1')
-
-      # span context destination
-      # TODO: test the region in the appropriate field when the spec is complete
-      #expect(span.context.destination.cloud.region).to eq('us-west-1')
-      expect(span.context.destination.resource).to eq('dynamodb')
-      expect(span.context.destination.type).to eq('db')
     end
 
     context 'when the operation fails' do
@@ -132,10 +103,12 @@ module ElasticAPM
             rescue
             end
           end
-          span = @intercepted.spans.first
-          expect(span.name).to eq('DynamoDB BatchGetItem')
-          expect(span.outcome).to eq('failure')
         end
+
+        span = @intercepted.spans.first
+
+        expect(span.name).to eq('DynamoDB BatchGetItem')
+        expect(span.outcome).to eq('failure')
       end
     end
   end
