@@ -35,6 +35,15 @@ endif::[]
 [[release-notes-3.x]]
 === Ruby Agent version 3.x
 
+[float]
+[[unreleased]]
+==== Unreleased
+
+[float]
+===== Changed
+
+- Changed DynamoDB instrumentation to match spec. Span names now follow the format `DynamoDB Operation [table]` {pull}976[#976]
+
 [[release-notes-3.14.0]]
 ==== 3.14.0 (2021-03-17)
 
@@ -50,7 +59,6 @@ endif::[]
 - Fixed setting outcome in Mongo spy when not traced {pull}937[#937]
 - Fixed missing container metadata in payloads {pull}942[#942]
 - Fixed outgoing HTTP request spans with no Host {pull}962[#962]
-- Fixed DynamoDB instrumentation to match spec {pull}976[#976]
 
 [[release-notes-3.13.0]]
 ==== 3.13.0 (2020-12-22)
